k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
  namespace: users-app
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    app: users-api
  ports:
    - port: 80
      targetPort: 3000
